--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>b1 advance HELLO DONG</h1>
+    <h1 style="color:bisque">b1 advance HELLO DONG</h1>
 </body>
 </html>
